@@ -73,7 +73,6 @@ Dist::Zilla::Plugin::Git::Commit = 2.020
 Dist::Zilla::Plugin::Git::Tag = 0
 Dist::Zilla::Plugin::Git::Push = 0
 Dist::Zilla::Plugin::CheckIssues = 0
-Dist::Zilla::Plugin::InstallRelease = 0
 Dist::Zilla::Plugin::ConfirmRelease = 0
 Dist::Zilla::Plugin::VerifyPhases = 0
 ; FIXME: [PodWeaver] needs to inject plugin and section prereqs
